// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:condition-builder 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            style="position: relative;"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--normal"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label"
                  >
                    <span>
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          条件组件
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-ConditionBuilderControl cxd-Form-control"
                  >
                    <div
                      class="cxd-CBGroup"
                    >
                      <div
                        class="cxd-CBGroup-toolbarCondition"
                      >
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="downshift-0-label"
                          class="cxd-Select"
                          role="combobox"
                          tabindex="0"
                        >
                          <div
                            class="cxd-Select-valueWrap"
                          >
                            <div
                              class="cxd-Select-value"
                            >
                              且
                            </div>
                          </div>
                          <span
                            class="cxd-Select-arrow"
                          >
                            <icon-mock
                              classname="icon icon-right-arrow-bold"
                              icon="right-arrow-bold"
                            />
                          </span>
                        </div>
                      </div>
                      <div
                        class="cxd-CBGroup-body-wrapper"
                      >
                        <div
                          class="cxd-CBGroup-body"
                        >
                          <div
                            class="cxd-CBGroup-placeholder "
                          >
                            空
                          </div>
                        </div>
                        <div
                          class="cxd-CBGroup-toolbar"
                        >
                          <div
                            class="cxd-CBGroup-toolbarConditionAdd"
                          >
                            <div
                              class="cxd-ButtonGroup"
                            >
                              <button
                                class="cxd-Button cxd-Button--link cxd-Button--size-xs"
                                type="button"
                              >
                                添加条件
                              </button>
                              <button
                                class="cxd-Button cxd-Button--link cxd-Button--size-xs"
                                type="button"
                              >
                                添加条件组
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <span
                    class="cxd-TplField cxd-Form-description"
                  >
                    <span>
                      适合让用户自己拼查询条件，然后后端根据数据生成 query where
                    </span>
                  </span>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:condition-builder with custom field 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    style="position: relative;"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  条件组件
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-ConditionBuilderControl cxd-Form-control"
          >
            <div
              class="cxd-CBGroup"
              data-group-id="b75e3339bbef"
            >
              <div
                class="cxd-CBGroup-toolbarCondition"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="downshift-6-label"
                  class="cxd-Select"
                  role="combobox"
                  tabindex="0"
                >
                  <div
                    class="cxd-Select-valueWrap"
                  >
                    <div
                      class="cxd-Select-value"
                    >
                      且
                    </div>
                  </div>
                  <span
                    class="cxd-Select-arrow"
                  >
                    <icon-mock
                      classname="icon icon-right-arrow-bold"
                      icon="right-arrow-bold"
                    />
                  </span>
                </div>
              </div>
              <div
                class="cxd-CBGroup-body-wrapper"
              >
                <div
                  class="cxd-CBGroup-body"
                >
                  <div
                    class="cxd-CBGroupOrItem"
                    data-id="2e914c5e4813"
                  >
                    <div
                      class="cxd-CBGroupOrItem-body"
                    >
                      <div
                        class="cxd-CBGroupOrItem-body-item"
                      >
                        <div
                          class="cxd-CBItem"
                        >
                          <div
                            class="cxd-CBGroup-field"
                          >
                            <div
                              class="cxd-ResultBox cxd-CBGroup-fieldInput is-clickable"
                              tabindex="-1"
                            >
                              <div
                                class="cxd-ResultBox-value-wrap"
                              >
                                <span
                                  class="cxd-ResultBox-singleValue"
                                >
                                  <span>
                                    自定义
                                  </span>
                                </span>
                                <span
                                  class="cxd-CBGroup-fieldCaret"
                                >
                                  <icon-mock
                                    classname="icon icon-caret"
                                    icon="caret"
                                  />
                                </span>
                              </div>
                              <div
                                class="cxd-ResultBox-actions"
                              />
                            </div>
                          </div>
                          <div
                            class="cxd-CBGroup-operator"
                          >
                            <div
                              class="cxd-ResultBox cxd-CBGroup-operatorInput is-clickable"
                              tabindex="-1"
                            >
                              <div
                                class="cxd-ResultBox-value-wrap"
                              >
                                <span
                                  class="cxd-ResultBox-singleValue"
                                >
                                  等于（自定义）
                                </span>
                                <span
                                  class="cxd-CBGroup-operatorCaret"
                                >
                                  <icon-mock
                                    classname="icon icon-caret"
                                    icon="caret"
                                  />
                                </span>
                              </div>
                              <div
                                class="cxd-ResultBox-actions"
                              />
                            </div>
                          </div>
                          <span>
                            <div
                              class="cxd-CBValue"
                            >
                              <div
                                class="cxd-Form-item cxd-Form-item--normal"
                                data-role="form-item"
                              >
                                <div
                                  class="cxd-ColorControl cxd-Form-control"
                                >
                                  <div
                                    class="cxd-ColorPicker"
                                  >
                                    <span
                                      class="cxd-ColorPicker-preview"
                                    >
                                      <i
                                        class="cxd-ColorPicker-previewIcon"
                                        style="background: rgb(17, 0, 17);"
                                      />
                                    </span>
                                    <input
                                      autocomplete="off"
                                      class="cxd-ColorPicker-input"
                                      placeholder="请选择颜色"
                                      size="10"
                                      type="text"
                                      value="#101"
                                    />
                                    <a
                                      class="cxd-ColorPicker-clear"
                                    >
                                      <icon-mock
                                        classname="icon icon-input-clear"
                                        icon="input-clear"
                                      />
                                    </a>
                                    <span
                                      class="cxd-ColorPicker-arrow"
                                    >
                                      <icon-mock
                                        classname="icon icon-caret"
                                        icon="caret"
                                      />
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </span>
                          <span>
                            <div
                              class="cxd-CBValue"
                            >
                              <span
                                class="cxd-TplField"
                              >
                                <span>
                                  ~
                                </span>
                              </span>
                            </div>
                          </span>
                          <span>
                            <div
                              class="cxd-CBValue"
                            >
                              <div
                                class="cxd-Form-item cxd-Form-item--normal"
                                data-role="form-item"
                              >
                                <div
                                  class="cxd-ColorControl cxd-Form-control"
                                >
                                  <div
                                    class="cxd-ColorPicker"
                                  >
                                    <span
                                      class="cxd-ColorPicker-preview"
                                    >
                                      <i
                                        class="cxd-ColorPicker-previewIcon"
                                        style="background: rgb(255, 0, 255);"
                                      />
                                    </span>
                                    <input
                                      autocomplete="off"
                                      class="cxd-ColorPicker-input"
                                      placeholder="请选择颜色"
                                      size="10"
                                      type="text"
                                      value="#f0f"
                                    />
                                    <a
                                      class="cxd-ColorPicker-clear"
                                    >
                                      <icon-mock
                                        classname="icon icon-input-clear"
                                        icon="input-clear"
                                      />
                                    </a>
                                    <span
                                      class="cxd-ColorPicker-arrow"
                                    >
                                      <icon-mock
                                        classname="icon icon-caret"
                                        icon="caret"
                                      />
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </span>
                        </div>
                        <button
                          class="cxd-Button cxd-Button--link cxd-Button--size-default cxd-CBDelete"
                          type="button"
                        >
                          <icon-mock
                            classname="icon icon-remove"
                            icon="remove"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="cxd-CBGroup-toolbar"
                >
                  <div
                    class="cxd-CBGroup-toolbarConditionAdd"
                  >
                    <div
                      class="cxd-ButtonGroup"
                    >
                      <button
                        class="cxd-Button cxd-Button--link cxd-Button--size-xs"
                        type="button"
                      >
                        添加条件
                      </button>
                      <button
                        class="cxd-Button cxd-Button--link cxd-Button--size-xs"
                        type="button"
                      >
                        添加条件组
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <span
            class="cxd-TplField cxd-Form-description"
          >
            <span>
              适合让用户自己拼查询条件，然后后端根据数据生成 query where
            </span>
          </span>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:condition-builder with select type & source & searchable 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            style="position: relative;"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--normal"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label"
                  >
                    <span>
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          条件组件
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-ConditionBuilderControl cxd-Form-control"
                  >
                    <div
                      class="cxd-CBGroup"
                      data-group-id="0b10d33fade8"
                    >
                      <div
                        class="cxd-CBGroup-toolbarCondition"
                      >
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="downshift-4-label"
                          class="cxd-Select"
                          role="combobox"
                          tabindex="0"
                        >
                          <div
                            class="cxd-Select-valueWrap"
                          >
                            <div
                              class="cxd-Select-value"
                            >
                              且
                            </div>
                          </div>
                          <span
                            class="cxd-Select-arrow"
                          >
                            <icon-mock
                              classname="icon icon-right-arrow-bold"
                              icon="right-arrow-bold"
                            />
                          </span>
                        </div>
                      </div>
                      <div
                        class="cxd-CBGroup-body-wrapper"
                      >
                        <div
                          class="cxd-CBGroup-body"
                        >
                          <div
                            class="cxd-CBGroupOrItem"
                            data-id="a5b98ab8efdf"
                          >
                            <div
                              class="cxd-CBGroupOrItem-body"
                            >
                              <div
                                class="cxd-CBGroupOrItem-body-item"
                              >
                                <div
                                  class="cxd-CBItem"
                                >
                                  <div
                                    class="cxd-CBGroup-field"
                                  >
                                    <div
                                      class="cxd-ResultBox cxd-CBGroup-fieldInput is-clickable"
                                      tabindex="-1"
                                    >
                                      <div
                                        class="cxd-ResultBox-value-wrap"
                                      >
                                        <span
                                          class="cxd-ResultBox-singleValue"
                                        >
                                          <span>
                                            动态选项
                                          </span>
                                        </span>
                                        <span
                                          class="cxd-CBGroup-fieldCaret"
                                        >
                                          <icon-mock
                                            classname="icon icon-caret"
                                            icon="caret"
                                          />
                                        </span>
                                      </div>
                                      <div
                                        class="cxd-ResultBox-actions"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="cxd-CBGroup-operator"
                                  >
                                    <div
                                      class="cxd-ResultBox cxd-CBGroup-operatorInput is-clickable"
                                      tabindex="-1"
                                    >
                                      <div
                                        class="cxd-ResultBox-value-wrap"
                                      >
                                        <span
                                          class="cxd-ResultBox-singleValue"
                                        >
                                          等于
                                        </span>
                                        <span
                                          class="cxd-CBGroup-operatorCaret"
                                        >
                                          <icon-mock
                                            classname="icon icon-caret"
                                            icon="caret"
                                          />
                                        </span>
                                      </div>
                                      <div
                                        class="cxd-ResultBox-actions"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="cxd-CBValue"
                                  >
                                    <div
                                      aria-expanded="true"
                                      aria-haspopup="listbox"
                                      aria-labelledby="downshift-5-label"
                                      aria-owns="downshift-5-menu"
                                      class="cxd-Select cxd-Select--searchable is-opened has-popover"
                                      role="combobox"
                                      style="position: relative;"
                                      tabindex="0"
                                    >
                                      <div
                                        class="cxd-Select-valueWrap"
                                      >
                                        <div
                                          class="cxd-Select-placeholder"
                                        >
                                          这个是下拉框
                                        </div>
                                      </div>
                                      <span
                                        class="cxd-Select-arrow"
                                      >
                                        <icon-mock
                                          classname="icon icon-right-arrow-bold"
                                          icon="right-arrow-bold"
                                        />
                                      </span>
                                      <div
                                        class="cxd-PopOver cxd-Select-popover cxd-PopOver--leftBottomLeftTop"
                                        style="display: block; width: 0px; left: 0px; top: 0px; position: relative;"
                                        theme="cxd"
                                      >
                                        <div
                                          class="cxd-PopOver-overlay"
                                        />
                                        <div
                                          class="cxd-Select-menu"
                                        >
                                          <div
                                            class="cxd-Select-input"
                                          >
                                            <icon-mock
                                              classname="icon icon-search"
                                              icon="search"
                                            />
                                            <input
                                              aria-activedescendant="downshift-5-item-0"
                                              aria-autocomplete="list"
                                              aria-controls="downshift-5-menu"
                                              aria-labelledby="downshift-5-label"
                                              autocomplete="off"
                                              id="downshift-5-input"
                                              placeholder="搜索"
                                              type="text"
                                              value="C"
                                            />
                                            <a
                                              class="cxd-Select-clear"
                                            >
                                              <icon-mock
                                                classname="icon icon-close"
                                                icon="close"
                                              />
                                            </a>
                                          </div>
                                          <div
                                            aria-selected="true"
                                            class="cxd-Select-option is-highlight"
                                            id="downshift-5-item-0"
                                            role="option"
                                          >
                                            <span
                                              class="cxd-Select-option-content"
                                              title="Option C"
                                            >
                                              <span>
                                                Option 
                                              </span>
                                              <span
                                                class="cxd-Select-option-hl"
                                              >
                                                C
                                              </span>
                                            </span>
                                          </div>
                                        </div>
                                        <div
                                          class="resize-sensor"
                                          style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
                                        >
                                          
  
                                          <div
                                            class="resize-sensor-expand"
                                            style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                                          >
                                            
    
                                            <div
                                              style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                                            />
                                            
  
                                          </div>
                                          
  
                                          <div
                                            class="resize-sensor-shrink"
                                            style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                                          >
                                            
    
                                            <div
                                              style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                                            />
                                            
  
                                          </div>
                                          
  
                                          <div
                                            class="resize-sensor-appear"
                                            style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
                                          />
                                        </div>
                                      </div>
                                      <div
                                        class="resize-sensor"
                                        style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
                                      >
                                        
  
                                        <div
                                          class="resize-sensor-expand"
                                          style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                                        >
                                          
    
                                          <div
                                            style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                                          />
                                          
  
                                        </div>
                                        
  
                                        <div
                                          class="resize-sensor-shrink"
                                          style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                                        >
                                          
    
                                          <div
                                            style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                                          />
                                          
  
                                        </div>
                                        
  
                                        <div
                                          class="resize-sensor-appear"
                                          style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
                                        />
                                      </div>
                                    </div>
                                  </div>
                                </div>
                                <button
                                  class="cxd-Button cxd-Button--link cxd-Button--size-default cxd-CBDelete"
                                  type="button"
                                >
                                  <icon-mock
                                    classname="icon icon-remove"
                                    icon="remove"
                                  />
                                </button>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="cxd-CBGroup-toolbar"
                        >
                          <div
                            class="cxd-CBGroup-toolbarConditionAdd"
                          >
                            <div
                              class="cxd-ButtonGroup"
                            >
                              <button
                                class="cxd-Button cxd-Button--link cxd-Button--size-xs"
                                type="button"
                              >
                                添加条件
                              </button>
                              <button
                                class="cxd-Button cxd-Button--link cxd-Button--size-xs"
                                type="button"
                              >
                                添加条件组
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <span
                    class="cxd-TplField cxd-Form-description"
                  >
                    <span>
                      适合让用户自己拼查询条件，然后后端根据数据生成 query where
                    </span>
                  </span>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:condition-builder with selectMode 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    style="position: relative;"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  条件组件
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-ConditionBuilderControl cxd-Form-control"
          >
            <div
              class="cxd-CBGroup"
              data-group-id="62b74d46aa04"
            >
              <div
                class="cxd-CBGroup-toolbarCondition"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="downshift-8-label"
                  class="cxd-Select"
                  role="combobox"
                  tabindex="0"
                >
                  <div
                    class="cxd-Select-valueWrap"
                  >
                    <div
                      class="cxd-Select-value"
                    >
                      且
                    </div>
                  </div>
                  <span
                    class="cxd-Select-arrow"
                  >
                    <icon-mock
                      classname="icon icon-right-arrow-bold"
                      icon="right-arrow-bold"
                    />
                  </span>
                </div>
              </div>
              <div
                class="cxd-CBGroup-body-wrapper"
              >
                <div
                  class="cxd-CBGroup-body"
                >
                  <div
                    class="cxd-CBGroupOrItem"
                    data-id="b8c22a3ec9f2"
                  >
                    <div
                      class="cxd-CBGroupOrItem-body"
                    >
                      <div
                        class="cxd-CBGroupOrItem-body-item"
                      >
                        <div
                          class="cxd-CBItem"
                        >
                          <div
                            class="cxd-CBGroup-field has-popover"
                          >
                            <div
                              class="cxd-ResultBox cxd-CBGroup-fieldInput is-active is-clickable"
                              style="position: relative;"
                              tabindex="-1"
                            >
                              <div
                                class="cxd-ResultBox-value-wrap"
                              >
                                <span
                                  class="cxd-ResultBox-placeholder"
                                >
                                  请选择字段
                                </span>
                                <span
                                  class="cxd-CBGroup-fieldCaret"
                                >
                                  <icon-mock
                                    classname="icon icon-caret"
                                    icon="caret"
                                  />
                                </span>
                              </div>
                              <div
                                class="cxd-ResultBox-actions"
                              />
                              <div
                                class="resize-sensor"
                                style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
                              >
                                
  
                                <div
                                  class="resize-sensor-expand"
                                  style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                                >
                                  
    
                                  <div
                                    style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                                  />
                                  
  
                                </div>
                                
  
                                <div
                                  class="resize-sensor-shrink"
                                  style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                                >
                                  
    
                                  <div
                                    style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                                  />
                                  
  
                                </div>
                                
  
                                <div
                                  class="resize-sensor-appear"
                                  style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
                                />
                              </div>
                            </div>
                            <div
                              class="cxd-PopOver cxd-PopOver--leftBottomLeftTop"
                              style="display: block; min-width: 100px; left: 0px; top: 0px; position: relative;"
                              theme="cxd"
                            >
                              <div
                                class="cxd-PopOver-overlay"
                              />
                              <div
                                class="cxd-TreeSelection is-scrollable"
                              >
                                <div
                                  class="cxd-TreeSelection-item"
                                >
                                  <div
                                    class="cxd-TreeSelection-itemInner"
                                  >
                                    <div
                                      class="cxd-TreeSelection-itemLabel"
                                    >
                                      <span
                                        class=""
                                      >
                                        文本
                                      </span>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="cxd-TreeSelection-item"
                                >
                                  <div
                                    class="cxd-TreeSelection-itemInner"
                                  >
                                    <div
                                      class="cxd-TreeSelection-itemLabel"
                                    >
                                      <span
                                        class=""
                                      >
                                        数字
                                      </span>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="cxd-TreeSelection-item"
                                >
                                  <div
                                    class="cxd-TreeSelection-itemInner"
                                  >
                                    <div
                                      class="cxd-TreeSelection-itemLabel"
                                    >
                                      <span
                                        class=""
                                      >
                                        布尔
                                      </span>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="cxd-TreeSelection-item is-expanded"
                                >
                                  <div
                                    class="cxd-TreeSelection-itemInner"
                                  >
                                    <a
                                      class="cxd-Table-expandBtn is-active"
                                    >
                                      <icon-mock
                                        classname="icon icon-right-arrow-bold"
                                        icon="right-arrow-bold"
                                      />
                                    </a>
                                    <div
                                      class="cxd-TreeSelection-itemLabel"
                                    >
                                      <span
                                        class=""
                                      >
                                        树形结构
                                      </span>
                                    </div>
                                  </div>
                                  <div
                                    class="cxd-TreeSelection-sublist"
                                  >
                                    <div
                                      class="cxd-TreeSelection-item"
                                    >
                                      <div
                                        class="cxd-TreeSelection-itemInner"
                                      >
                                        <a
                                          class="cxd-Table-expandBtn"
                                        >
                                          <icon-mock
                                            classname="icon icon-right-arrow-bold"
                                            icon="right-arrow-bold"
                                          />
                                        </a>
                                        <div
                                          class="cxd-TreeSelection-itemLabel"
                                        >
                                          <span
                                            class=""
                                          >
                                            Folder A
                                          </span>
                                        </div>
                                      </div>
                                      <div
                                        class="cxd-TreeSelection-sublist"
                                      >
                                        <div
                                          class="cxd-TreeSelection-item"
                                        >
                                          <div
                                            class="cxd-TreeSelection-itemInner"
                                          >
                                            <div
                                              class="cxd-TreeSelection-itemLabel"
                                            >
                                              <span
                                                class=""
                                              >
                                                file A
                                              </span>
                                            </div>
                                          </div>
                                        </div>
                                        <div
                                          class="cxd-TreeSelection-item"
                                        >
                                          <div
                                            class="cxd-TreeSelection-itemInner"
                                          >
                                            <a
                                              class="cxd-Table-expandBtn"
                                            >
                                              <icon-mock
                                                classname="icon icon-right-arrow-bold"
                                                icon="right-arrow-bold"
                                              />
                                            </a>
                                            <div
                                              class="cxd-TreeSelection-itemLabel"
                                            >
                                              <span
                                                class=""
                                              >
                                                Folder B
                                              </span>
                                            </div>
                                          </div>
                                          <div
                                            class="cxd-TreeSelection-sublist"
                                          >
                                            <div
                                              class="cxd-TreeSelection-item"
                                            >
                                              <div
                                                class="cxd-TreeSelection-itemInner"
                                              >
                                                <div
                                                  class="cxd-TreeSelection-itemLabel"
                                                >
                                                  <span
                                                    class=""
                                                  >
                                                    file b1
                                                  </span>
                                                </div>
                                              </div>
                                            </div>
                                            <div
                                              class="cxd-TreeSelection-item"
                                            >
                                              <div
                                                class="cxd-TreeSelection-itemInner"
                                              >
                                                <div
                                                  class="cxd-TreeSelection-itemLabel"
                                                >
                                                  <span
                                                    class=""
                                                  >
                                                    file b2
                                                  </span>
                                                </div>
                                              </div>
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="resize-sensor"
                                style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
                              >
                                
  
                                <div
                                  class="resize-sensor-expand"
                                  style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                                >
                                  
    
                                  <div
                                    style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                                  />
                                  
  
                                </div>
                                
  
                                <div
                                  class="resize-sensor-shrink"
                                  style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                                >
                                  
    
                                  <div
                                    style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                                  />
                                  
  
                                </div>
                                
  
                                <div
                                  class="resize-sensor-appear"
                                  style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <button
                          class="cxd-Button cxd-Button--link cxd-Button--size-default cxd-CBDelete"
                          type="button"
                        >
                          <icon-mock
                            classname="icon icon-remove"
                            icon="remove"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="cxd-CBGroup-toolbar"
                >
                  <div
                    class="cxd-CBGroup-toolbarConditionAdd"
                  >
                    <div
                      class="cxd-ButtonGroup"
                    >
                      <button
                        class="cxd-Button cxd-Button--link cxd-Button--size-xs"
                        type="button"
                      >
                        添加条件
                      </button>
                      <button
                        class="cxd-Button cxd-Button--link cxd-Button--size-xs"
                        type="button"
                      >
                        添加条件组
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;
